crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__gauge_25_percent.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="60" viewBox="0 0 100 60">
<path d="M 5.0 50.0 A 45.0 45.0 0 0 1 95.0 50.0" fill="none" stroke="#E0E0E0" stroke-width="10" stroke-linecap="round"/>
<path d="M 5.0 50.0 A 45.0 45.0 0 0 1 95.0 50.0" fill="none" stroke="#4CAF50" stroke-width="10" stroke-linecap="round" stroke-dasharray="35.34 106.03"/>
</svg>
