crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__gauge_label_and_thumb.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="120" height="93" viewBox="0 0 120 93">
<path d="M 6.0 60.0 A 54.0 54.0 0 0 1 114.0 60.0" fill="none" stroke="#E0E0E0" stroke-width="12" stroke-linecap="round"/>
<path d="M 6.0 60.0 A 54.0 54.0 0 0 1 114.0 60.0" fill="none" stroke="#3F51B5" stroke-width="12" stroke-linecap="round" stroke-dasharray="118.75 50.89"/>
  <circle cx="91.7" cy="16.3" r="7.0" fill="#3F51B5"/>
  <text x="60" y="82.0" text-anchor="middle" fill="#333333" font-family="Arial, sans-serif" font-size="18" font-weight="bold">70%</text>
</svg>
