crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__gauge_small.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="60" height="36" viewBox="0 0 60 36">
<path d="M 3.0 30.0 A 27.0 27.0 0 0 1 57.0 30.0" fill="none" stroke="#E0E0E0" stroke-width="6" stroke-linecap="round"/>
<path d="M 3.0 30.0 A 27.0 27.0 0 0 1 57.0 30.0" fill="none" stroke="#F44336" stroke-width="6" stroke-linecap="round" stroke-dasharray="50.89 33.93"/>
</svg>
