crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__gauge_with_thumb.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="62" viewBox="0 0 100 62">
<path d="M 5.0 50.0 A 45.0 45.0 0 0 1 95.0 50.0" fill="none" stroke="#E0E0E0" stroke-width="10" stroke-linecap="round"/>
<path d="M 5.0 50.0 A 45.0 45.0 0 0 1 95.0 50.0" fill="none" stroke="#FF5722" stroke-width="10" stroke-linecap="round" stroke-dasharray="56.55 84.82"/>
  <circle cx="36.1" cy="7.2" r="7.0" fill="#FF5722"/>
</svg>
